# rt3d-assignment

./: CMakeLists.txt  LICENSE  README.md
Game/: gamefile.txt
Game/levels/: level_1.txt  level_2.txt  level_3.txt
RT3DAssignment/: BadGuy.cpp  BadGuy.h  Block.cpp  Block.h  BoundingBox3d.cpp  BoundingBox3d.h  Camera.cpp  Camera.h  Character.cpp  Character.h  Coin.cpp  Coin.h  Color.cpp  Color.h  Game.cpp  Game.h  Heightmap.cpp  Heightmap.h  Level.cpp  Level.h  Light.cpp  Light.h  MD2Model.cpp  MD2Model.h  Material.cpp  Material.h  Plane3d.cpp  Plane3d.h  Player.cpp  Player.h  SkyBox.cpp  SkyBox.h  Sound.cpp  Sound.h  TextureLoader.cpp  TextureLoader.h  Vector3.cpp  Vector3.h  glbmp.c  glbmp.h  (+2 more)
